--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,6 @@
-# spring.datasource.url=jdbc:mysql://${RDS_DB_HOST}:${RDS_DB_PORT}/${RDS_DB_NAME}
-# spring.datasource.username=${RDS_DB_USER}
-# spring.datasource.password=${RDS_DB_PSW}
-spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/postgres
-spring.datasource.username=wwalpha
-spring.datasource.password=session10
+spring.datasource.url=jdbc:postgresql://${RDS_DB_HOST}:${RDS_DB_PORT}/${RDS_DB_NAME}
+spring.datasource.username=${RDS_DB_USER}
+spring.datasource.password=${RDS_DB_PSW}
 
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.id.new_generator_mappings = false
@@ -13,5 +10,4 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 spring.thymeleaf.mode=HTML
 
-#server:
-#  contextPath: /sample
+server.servlet.context-path=/sample
